--- a/dev/index.html
+++ b/dev/index.html
@@ -6,18 +6,49 @@
     <title>&lt;my-element> Demo</title>
     <link rel="shortcut icon" href="#">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script type="module" src="../my-element.js"></script>
+    <script type="module" src="../popup-element.js"></script>
+    <script type="module" src="../payment-method-element.js"></script>
+    <script type="module" src="../open-btn-element.js"></script>
+    <script type="module" src="../login-element.js"></script>
+    <script type="module" src="../logo-element.js"></script>
+    <script type="module" src="../index.js"></script>
     <style>
       p {
         border: solid 1px blue;
         padding: 8px;
       }
+      popup-element {
+        display: none;
+      }
     </style>
   </head>
   <body>
-    <my-element>
+
+
+    <!-- <my-element>
       <p>This is child content</p>
-    </my-element>
-    <script type="module" src="../my-element.js"></script>
+    </my-element> -->
+
+    <!-- <button @click=${this._onClick} id="openPopupButton">Open Pop-up</button> -->
+   
+    <popup-element></popup-element>
+    <open-btn-element></open-btn-element>
+
+
+    <!-- <script type="module" src="../my-element.js">
+      const openPopupButton = document.getElementById('openPopupButton');
+      const popupComponent = document.querySelector('popup-element');
+      console.log(popupComponent);
+      openPopupButton.addEventListener('click', () => { 
+        popupComponent.style.display = 'block';
+      });
+    </script> -->
+    <script src="/index.js"></script>
+    
   </body>
 </html>
