--- a/dev/index.html
+++ b/dev/index.html
@@ -17,6 +17,8 @@
     <script type="module" src="../login-element.js"></script>
     <script type="module" src="../logo-element.js"></script>
     <script type="module" src="../index.js"></script>
+    <script type="module" src="../language-toggle.js"></script>
+    <script type="module" src="../forgot-pass.js"></script>
     <style>
       p {
         border: solid 1px blue;
@@ -49,6 +51,5 @@
       });
     </script> -->
     <script src="/index.js"></script>
-    
   </body>
 </html>
