sign up step layout and relative logic for that, in progress finish validation, country input as separate element

--- a/dev/index.html
+++ b/dev/index.html
@@ -19,6 +19,7 @@
     <script type="module" src="../index.js"></script>
     <script type="module" src="../language-toggle.js"></script>
     <script type="module" src="../forgot-pass.js"></script>
+    <script type="module" src="../sign-up-element.js"></script>
     <style>
       p {
         border: solid 1px blue;
