sign up | current state, almost finish validation

--- a/dev/index.html
+++ b/dev/index.html
@@ -20,6 +20,7 @@
     <script type="module" src="../language-toggle.js"></script>
     <script type="module" src="../forgot-pass.js"></script>
     <script type="module" src="../sign-up-element.js"></script>
+    <script type="module" src="../county-input.js"></script>
     <style>
       p {
         border: solid 1px blue;
